force-app/main/default/objects/Enhanced_Note__c/Enhanced_Note__c.object-meta.xml
<CustomObject>
    <label>Enhanced Note</label>
    <nameField>
        <displayFormat>NOTE-{000000000}</displayFormat>
        <label>Enhanced Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhanced Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>