force-app/main/default/objects/Enhanced_Note__c/fields/AuthorRole__c.field-meta.xml
<CustomField>
    <fullName>AuthorRole__c</fullName>
    <label>Author Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>