force-app/main/default/objects/Enhanced_Note__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>