force-app/main/default/objects/Enhanced_Note__c/fields/Enhanced_Note_Role__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Note_Role__c</fullName>
    <description>Gets enhanced note role</description>
    <formula>TEXT(CreatedBy.Enhanced_Note_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enhanced Note Role</label>
    <type>Text</type>
</CustomField>