force-app/main/default/objects/Enhanced_Note__c/fields/IsSameUser__c.field-meta.xml
<CustomField>
    <fullName>IsSameUser__c</fullName>
    <formula>$User.Id == CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Logged In User Creator Of Note</label>
    <type>Checkbox</type>
</CustomField>