force-app/main/default/objects/Enhanced_Note__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Enhanced Notes</relationshipLabel>
    <relationshipName>Enhanced_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>