force-app/main/default/objects/Enhanced_Note__c/fields/RoleToIconMapping__c.field-meta.xml
<CustomField>
    <fullName>RoleToIconMapping__c</fullName>
    <formula>CASE(Enhanced_Note_Role__c,  
&quot;Loan Officer&quot;, &quot;action:new_person_account&quot;,
&quot;Opener&quot;,&quot;action:add_contact&quot;,
&quot;Processor&quot;,&quot;action:new_note&quot;,
&quot;Closer&quot;,&quot;action:join_group&quot;,
&quot;Funder&quot;,&quot;action:new_lead&quot;,
&quot;action:user&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role To Icon Mapping</label>
    <type>Text</type>
</CustomField>