force-app/main/default/objects/Enhanced_Note__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Enhanced Notes</relationshipLabel>
    <relationshipName>Enhanced_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>